# SDL2OpenGL4Basic

./: Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  DaeLoader.cpp  DaeLoader.h  EAngle.cpp  EAngle.h  Face.cpp  Face.h  Light.cpp  Light.h  MD2Model.cpp  MD2Model.h  Main.cpp  Mat4.h  Material.cpp  Material.h  Math.cpp  Math.h  Model.h  ModelLoader.cpp  ModelLoader.h  ModelMaterial.h  ObjLoader.cpp  ObjLoader.h  ObjMaterial.cpp  ObjMaterial.h  OpenGL4Basic.cbp  OpenGL4Basic.cscope_file_list  OpenGL4Basic.depend  OpenGL4Basic.layout  PMDL.cpp  PMDL.h  PMDLMaterial.cpp  PMDLMaterial.h  Readme.md  Renderable.cpp  (+17 more)
hueteotl/: shader.frag  shader.vert
resources/models/: cube.dae  invCube.mtl  plane.mtl  plane.pmdl  square.pmdl  test.pmdl  texCube.mtl  texCube.xcf  thing.blend  thing.blend1  thing.blend11  thing.dae  thing.mtl
resources/shaders/: shader_diffuse.frag  shader_multilight.frag  shader_multilight.vert  shader_specular.frag  shader_specular.vert  shader_spotlight.frag  shader_spotlight.vert
